[FIX] <pro>FormField: Fixed border style with required. [IMP] <pro>OverflowTip: Optimize text overflow calculation logic.

--- a/components-pro/button/style/index.less
+++ b/components-pro/button/style/index.less
@@ -25,17 +25,15 @@
     pointer-events: auto;
   }
 
-  &-disabled-wrapper {
+  &-disabled-wrapper > button {
+    height: 100%;
+    margin: 0;
     padding: 0;
-
-    > button {
-      height: 100%;
-      padding: @btn-padding-base;
-      background-color: transparent;
-      border: none;
-      cursor: inherit;
-      pointer-events: none;
-    }
+    background-color: transparent;
+    border: none;
+    cursor: inherit;
+    pointer-events: none;
+    text-align: inherit;
   }
 
   &:focus {
