--- a/components-pro/table/style/customization.less
+++ b/components-pro/table/style/customization.less
@@ -130,7 +130,7 @@
   }
 
   &-form {
-    padding-top: .05rem;
+    padding-top: @table-customization-form-padding-vertical;
   }
 
   &-option {
